[gd_scene load_steps=10 format=2]

[ext_resource path="res://game/bomb.gd" type="Script" id=1]
[ext_resource path="res://framework/resources/shapes/8/circle_8.png" type="Texture2D" id=2]
[ext_resource path="res://framework/node_modules/audio_players/detachable_audio_player/DetachableAudioPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/bomb_spawn_01.wav" type="AudioStream" id=4]
[ext_resource path="res://game/bomb_01.wav" type="AudioStream" id=7]
[ext_resource path="res://game/bomb_02.wav" type="AudioStream" id=8]
[ext_resource path="res://game/bomb_03.wav" type="AudioStream" id=9]
[ext_resource path="res://game/tick_01.wav" type="AudioStream" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 26.0

[node name="Bomb" type="Node2D"]
script = ExtResource( 1 )
explosion_time = 2.25
tick_count = 4
explosion_duration = 0.5
line_segment_count = 24

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color( 0, 0, 0, 0.490196 )
position = Vector2( 2, 1 )
z_index = -8
texture = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color( 0.909804, 0.717647, 0.588235, 1 )
texture = ExtResource( 2 )

[node name="Blink" type="Sprite2D" parent="."]
modulate = Color( 1, 0, 0.266667, 1 )
texture = ExtResource( 2 )

[node name="ExplosionArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource( 1 )
disabled = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SpawnSound" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SpawnSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 4 )
bus = "BombSpawn"

[node name="TickSound" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="TickSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 10 )
bus = "Game"

[node name="ExplodeSound" parent="." instance=ExtResource( 3 )]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="0"]
stream = ExtResource( 7 )
bus = "Game"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="1"]
stream = ExtResource( 8 )
bus = "Game"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="ExplodeSound/RandomAudioPlayer" index="2"]
stream = ExtResource( 9 )
bus = "Game"

[node name="TickTimer" type="Timer" parent="."]

[node name="ExplosionLine" type="Line2D" parent="."]
visible = false
width = 1.0
default_color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="BlastShadow" type="Polygon2D" parent="."]
z_index = -8
color = Color( 0, 0, 0, 0.490196 )
offset = Vector2( 2, 1 )

[node name="ExplosionPolygon" type="Polygon2D" parent="."]
z_index = 1
color = Color( 0.964706, 0.458824, 0.478431, 1 )

[node name="Tween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]

[editable path="SpawnSound"]
[editable path="SpawnSound/RandomAudioPlayer"]
[editable path="TickSound"]
[editable path="TickSound/RandomAudioPlayer"]
[editable path="ExplodeSound"]
[editable path="ExplodeSound/RandomAudioPlayer"]
